--- a/wavue/packages/lecture/src/docs/md_001.md
+++ b/wavue/packages/lecture/src/docs/md_001.md
@@ -50,3 +50,9 @@
 ## 4.컴포넌트 개발
 
 ---
+
+이전 위치로 이동	Alt + ←	(정의로 갔다가 돌아올 때 등)
+다음 위치로 이동	Alt + →	“이전 위치로 이동” 취소
+커서가 있던 곳으로 이동	Ctrl + U	(Undo Cursor Move, 커서 이동 전 위치로 되돌림)
+최근 열었던 파일 간 이동	Ctrl + Tab	(탭 전환)
+최근 위치 탐색 목록	Ctrl + Shift + H	(Go > Back / Forward History)
